# samlaws

./: .dockerignore  .gitignore  Makefile  pyproject.toml  setup.py  srcs.mk  venv.mk
docker/: CONFIG  Dockerfile  build.sh  rsyncdev.sh  run-dockershell.sh  run.sh  shvars
docs/: howto.md  linter.md  packaging.md  publishing.md  security.md  validate.md
src/: SAconfig.py  SAlogger.py  SAsamlaws.py  SAserialize.py  linux_vsgaws_saml.py  samlaws
tests/: test_unit_SAconfig.py  test_unit_SAlogger.py  test_unit_SAsamlaws.py  test_unit_SAserialize.py
